--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,7 +12,7 @@ concurrency:
 
 env:
     NX_CLOUD_AUTH_TOKEN: ${{ secrets.NX_CLOUD_AUTH_TOKEN }}
-    CYPRESS_RECORD_KEY: ${{ secrets.NX_CYPRESS_KEY }}
+    CYPRESS_CMD: '--record --key ${{ env.CYPRESS_RECORD_KEY }}'
 
 jobs:
     main:
@@ -24,7 +24,7 @@ jobs:
             number-of-agents: 2
             parallel-commands: |
                 pnpm exec nx-cloud record -- pnpm exec nx format:check
-                pnpm e2e:ci ${{ github.ref == 'refs/heads/develop' && '--record --key ${{ env.CYPRESS_RECORD_KEY }}' || '' }}
+                pnpm e2e:ci ${{ github.ref == 'refs/heads/develop' && env.CYPRESS_CMD || '' }}
             parallel-commands-on-agents: |
                 pnpm exec nx affected --target=lint --parallel=2 --exclude=components-common,keck,theme
                 pnpm exec nx affected --target=build --parallel=2
