--- a/libs/framework/virgo/package.json
+++ b/libs/framework/virgo/package.json
@@ -2,5 +2,6 @@
     "name": "@toeverything/framework/virgo",
     "version": "0.0.1",
     "license": "MIT",
+    "main": "src/index.ts",
     "dependencies": {}
 }
