--- a/libs/components/account/package.json
+++ b/libs/components/account/package.json
@@ -2,6 +2,7 @@
     "name": "@toeverything/components/account",
     "version": "0.0.1",
     "license": "MIT",
+    "main": "src/index.ts",
     "dependencies": {
         "@authing/react-ui-components": "^3.1.39",
         "@emotion/styled": "^11.9.3"
