--- a/libs/components/affine-editor/package.json
+++ b/libs/components/affine-editor/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@toeverything/components/affine-editor",
     "version": "0.0.1",
+    "main": "src/index.ts",
     "license": "MIT"
 }
