--- a/libs/components/board-shapes/package.json
+++ b/libs/components/board-shapes/package.json
@@ -2,6 +2,7 @@
     "name": "@toeverything/components/board-shapes",
     "version": "0.0.1",
     "license": "MIT",
+    "main": "src/index.ts",
     "dependencies": {
         "@tldraw/core": "^1.12.0",
         "@tldraw/intersect": "^1.7.1",
