--- a/libs/components/ui/package.json
+++ b/libs/components/ui/package.json
@@ -2,6 +2,7 @@
     "name": "@toeverything/components/ui",
     "version": "0.0.1",
     "license": "MIT",
+    "main": "src/index.ts",
     "dependencies": {
         "@emotion/is-prop-valid": "^1.1.3",
         "@emotion/react": "^11.9.3",
