--- a/libs/datasource/commands/package.json
+++ b/libs/datasource/commands/package.json
@@ -2,6 +2,7 @@
     "name": "@toeverything/datasource/commands",
     "version": "0.0.1",
     "license": "MIT",
+    "main": "src/index.ts",
     "type": "commonjs",
     "dependencies": {}
 }
