--- a/libs/datasource/feature-flags/package.json
+++ b/libs/datasource/feature-flags/package.json
@@ -2,6 +2,7 @@
     "name": "@toeverything/datasource/feature-flags",
     "version": "0.0.1",
     "license": "MIT",
+    "main": "src/index.ts",
     "dependencies": {
         "ffc-js-client-side-sdk": "^1.1.4"
     }
