--- a/libs/datasource/jwt-rpc/package.json
+++ b/libs/datasource/jwt-rpc/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "license": "MIT",
     "author": "DarkSky <darksky2048@gmail.com>",
+    "main": "src/index.ts",
     "dependencies": {
         "lib0": "^0.2.52",
         "sql.js": "^1.7.0",
