--- a/libs/utils/package.json
+++ b/libs/utils/package.json
@@ -2,6 +2,7 @@
     "name": "@toeverything/utils",
     "version": "0.0.1",
     "license": "MIT",
+    "main": "src/index.ts",
     "dependencies": {
         "copy-to-clipboard": "^3.3.1",
         "ffc-js-client-side-sdk": "^1.1.4",
