feat: add theme support code editor block

--- a/libs/components/editor-blocks/package.json
+++ b/libs/components/editor-blocks/package.json
@@ -29,6 +29,14 @@
         "@emotion/react": "^11.9.3",
         "@emotion/styled": "^11.9.3",
         "@mui/system": "^5.8.6",
+        "cm6-theme-basic-dark": "0.2.0",
+        "cm6-theme-basic-light": "0.2.0",
+        "cm6-theme-gruvbox-dark": "0.2.0",
+        "cm6-theme-gruvbox-light": "0.2.0",
+        "cm6-theme-material-dark": "0.2.0",
+        "cm6-theme-nord": "0.2.0",
+        "cm6-theme-solarized-dark": "0.2.0",
+        "cm6-theme-solarized-light": "0.2.0",
         "code-example": "^3.3.6",
         "codemirror": "6.0.1",
         "codemirror-lang-elixir": "^3.0.0",
