feat:New multi-language support for venus

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "incollection",
         "inproceedings",
         "Kanban",
+        "Kanbans",
         "keyval",
         "ligo",
         "livedemo",
