--- a/libs/components/layout/package.json
+++ b/libs/components/layout/package.json
@@ -2,6 +2,9 @@
     "name": "@toeverything/components/layout",
     "version": "0.0.1",
     "license": "MIT",
+    "scripts": {
+        "scan": "i18next-scanner"
+    },
     "dependencies": {
         "@date-io/date-fns": "^2.14.0",
         "@dnd-kit/core": "^6.0.5",
