--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
         "babel-plugin-open-source": "^1.3.4",
         "change-case": "^4.1.2",
         "compression-webpack-plugin": "^10.0.0",
+        "copy-webpack-plugin": "^11.0.0",
         "cross-env": "^7.0.3",
         "css-minimizer-webpack-plugin": "^4.0.0",
         "cz-customizable": "^5.3.0",
@@ -150,7 +151,8 @@
         "ts-node": "^10.8.2",
         "typescript": "^4.7.4",
         "webpack": "^5.74.0",
-        "webpack-bundle-analyzer": "^4.5.0"
+        "webpack-bundle-analyzer": "^4.5.0",
+        "workbox-webpack-plugin": "^6.5.4"
     },
     "lint-staged": {
         "**/*.{ts,tsx}": [
