--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,7 +14,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: 16
           registry-url: https://npm.pkg.github.com
           scope: '@toeverything'
           cache: 'pnpm'
