--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "devDependencies": {
     "@playwright/test": "^1.28.1",
     "@types/node": "18.7.18",
+    "change-case": "^4.1.2",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1"
+    "fs-extra": "^10.1.0",
+    "got": "^12.5.3",
+    "prettier": "^2.7.1",
+    "svgo": "^3.0.2"
   }
 }
