--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "test:e2e": "playwright test"
   },
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
     "@playwright/test": "^1.28.1",
     "@types/node": "18.7.18",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1"
+    "jest": "^29.3.1",
+    "prettier": "^2.7.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.3"
   }
 }
