chore: add github action for unit test

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "export": "pnpm --filter @pathfinder/app export",
     "start": "pnpm --filter @pathfinder/app start",
     "lint": "pnpm --filter @pathfinder/app lint",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "test:unit": "jest"
   },
   "devDependencies": {
     "@jest/globals": "^29.3.1",
