--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -2,15 +2,16 @@
   "name": "@pathfinder/app",
   "version": "0.1.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@blocksuite/blocks": "0.3.0-alpha.1",
-    "@blocksuite/editor": "0.3.0-alpha.1",
+    "@blocksuite/blocks": "0.3.0-alpha.3",
+    "@blocksuite/editor": "0.3.0-alpha.3",
+    "@blocksuite/store": "0.3.0-alpha.3",
     "@emotion/css": "^11.10.0",
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
