--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@blocksuite/blocks": "0.3.0-alpha.3",
     "@blocksuite/editor": "0.3.0-alpha.3",
+    "@blocksuite/icons": "^1.0.3",
     "@blocksuite/store": "0.3.0-alpha.3",
     "@emotion/css": "^11.10.0",
     "@emotion/react": "^11.10.4",
