--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.8.6",
     "@toeverything/pathfinder-logger": "workspace:@pathfinder/logger@*",
+    "cmdk": "^0.1.20",
     "css-spring": "^4.1.0",
     "lit": "^2.3.1",
     "next": "13.0.1",
