--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -25,6 +25,7 @@
     "@toeverything/pathfinder-logger": "workspace:@pathfinder/logger@*",
     "cmdk": "^0.1.20",
     "css-spring": "^4.1.0",
+    "dayjs": "^1.11.7",
     "lit": "^2.3.1",
     "next": "13.0.1",
     "prettier": "^2.7.1",
