--- a/packages/data-services/package.json
+++ b/packages/data-services/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "axios": "^1.2.0",
+    "encoding": "^0.1.13",
     "firebase": "^9.13.0",
     "swr": "^2.0.0"
   }
