chore: health check

--- a/.github/deployment/Caddyfile
+++ b/.github/deployment/Caddyfile
@@ -15,14 +15,13 @@
 		Cache-Control "public, max-age=86400, must-revalidate"
 	}
 
-	handle_path /api/* {
-		reverse_proxy {$API_SERVER} {
-			@error status 500 502 503 503
-			handle_response @error {
-				root * /dist
-				rewrite * /50x.html
-				file_server
-			}
+	reverse_proxy /api/* {$API_SERVER} {
+		health_uri /api/healthz
+		@error status 500 502 503 503
+		handle_response @error {
+			root * /dist
+			rewrite * /50x.html
+			file_server
 		}
 	}
 
