--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@blocksuite/blocks": "0.3.0-alpha.10",
-    "@blocksuite/editor": "0.3.0-alpha.10",
+    "@blocksuite/blocks": "0.3.0-20221220194556-5c0f17f",
+    "@blocksuite/editor": "0.3.0-20221220194556-5c0f17f",
     "@blocksuite/icons": "^2.0.2",
-    "@blocksuite/store": "0.3.0-alpha.10",
+    "@blocksuite/store": "0.3.0-20221220194556-5c0f17f",
     "@emotion/css": "^11.10.0",
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
@@ -28,7 +28,7 @@
     "css-spring": "^4.1.0",
     "dayjs": "^1.11.7",
     "i18next": "^21.9.1",
-    "lit": "^2.3.1",
+    "lit": "^2.5.0",
     "next": "13.0.1",
     "prettier": "^2.7.1",
     "quill": "^1.3.7",
@@ -45,6 +45,7 @@
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "next-transpile-modules": "^10.0.0",
     "typescript": "4.8.3"
   }
 }
