--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@blocksuite/blocks": "0.3.0-alpha.10",
-    "@blocksuite/editor": "0.3.0-alpha.10",
+    "@blocksuite/blocks": "0.3.0-20221221064254-e3ebf2f",
+    "@blocksuite/editor": "0.3.0-20221221064254-e3ebf2f",
     "@blocksuite/icons": "^2.0.2",
-    "@blocksuite/store": "0.3.0-alpha.10",
+    "@blocksuite/store": "0.3.0-20221221064254-e3ebf2f",
     "@emotion/css": "^11.10.0",
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
