--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "pnpm --filter @pathfinder/app lint",
     "test": "playwright test",
     "test:e2e": "playwright test",
+    "test:e2e:codegen":"npx playwright codegen http://localhost:8080",
     "test:unit": "jest"
   },
   "devDependencies": {
