--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -48,5 +48,15 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "typescript": "4.8.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "next/core-web-vitals",
+      "plugin:@next/next/recommended"
+    ],
+    "rules": {
+      "prettier/prettier": "warn"
+    },
+    "reportUnusedDisableDirectives": true
   }
 }
