--- a/.github/workflows/build-test-version.yml
+++ b/.github/workflows/build-test-version.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Lint
         run: |
-          pnpm lint --max-warnings=0
+          pnpm lint
 
       # - name: Test
       #   run: pnpm test
