--- a/packages/data-services/package.json
+++ b/packages/data-services/package.json
@@ -26,6 +26,8 @@
     "encoding": "^0.1.13",
     "firebase": "^9.13.0",
     "ky": "^0.33.0",
-    "swr": "^2.0.0"
+    "swr": "^2.0.0",
+    "lib0": "^0.2.58",
+    "y-protocols": "^1.0.5"
   }
 }
