--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "pnpm --filter=!@pathfinder/app build && pnpm --filter @pathfinder/app dev",
-    "build": "pnpm -r build",
+    "build": " pnpm --filter=!@pathfinder/app build && pnpm --filter!=@pathfinder/data-services -r build",
     "export": "pnpm --filter @pathfinder/app export",
     "start": "pnpm --filter @pathfinder/app start",
     "lint": "pnpm --filter @pathfinder/app lint",
