--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@blocksuite/blocks": "0.3.0-20221223170121-bbfb8c0",
-    "@blocksuite/editor": "0.3.0-20221223170121-bbfb8c0",
+    "@blocksuite/blocks": "0.3.0-20221224062401-54874d6",
+    "@blocksuite/editor": "0.3.0-20221224062401-54874d6",
     "@blocksuite/icons": "^2.0.2",
-    "@blocksuite/store": "0.3.0-20221223170121-bbfb8c0",
+    "@blocksuite/store": "0.3.0-20221224062401-54874d6",
     "@emotion/css": "^11.10.0",
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
@@ -30,6 +30,7 @@
     "i18next": "^21.9.1",
     "lit": "^2.3.1",
     "next": "13.0.1",
+    "yjs": "^13.5.43",
     "prettier": "^2.7.1",
     "quill": "^1.3.7",
     "quill-cursors": "^4.0.0",
