--- a/packages/app/.env.local.template
+++ b/packages/app/.env.local.template
@@ -5,3 +5,4 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
+LOCAL_BLOCL_SUITE=
