--- a/packages/app/.env.local.template
+++ b/packages/app/.env.local.template
@@ -5,4 +5,5 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
-LOCAL_BLOCL_SUITE=
+# absolute path to the block suite directory
+LOCAL_BLOCK_SUITE=
