feat: update AFFINE to AFFiNE

--- a/packages/data-services/package.json
+++ b/packages/data-services/package.json
@@ -16,7 +16,7 @@
   "author": "",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/toeverything/AFFINE.git"
+    "url": "git+https://github.com/toeverything/AFFiNE.git"
   },
   "devDependencies": {
     "typescript": "^4.8.4"
