--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -30,13 +30,14 @@
     "i18next": "^21.9.1",
     "lit": "^2.3.1",
     "next": "13.1.0",
-    "yjs": "^13.5.43",
+    "next-debug-local": "^0.1.5",
     "prettier": "^2.7.1",
     "quill": "^1.3.7",
     "quill-cursors": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^11.18.4"
+    "react-i18next": "^11.18.4",
+    "yjs": "^13.5.43"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
