--- a/.github/workflows/build-livedemo.yml
+++ b/.github/workflows/build-livedemo.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Lint
         run: |
-          pnpm lint
+          pnpm lint --max-warnings=0
 
       # - name: Test
       #   run: pnpm test
