chore: use public action runner

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
 
   lint:
     name: Lint and Test
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     environment: development
 
     steps:
