chore: playwright install

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,8 +109,13 @@ jobs:
         run: |
           pnpm lint --max-warnings=0
 
+      - name: Install Playwright browsers
+        run: PLAYWRIGHT_BROWSERS_PATH=0 npx playwright install chromium
+
       - name: E2E Test
-        run: pnpm test
+        run: |
+          PLAYWRIGHT_BROWSERS_PATH=0 npx playwright install chromium
+          PLAYWRIGHT_BROWSERS_PATH=0 pnpm test -- --forbid-only
         env:
           NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
           NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
