--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MPL-2.0",
   "scripts": {
     "dev": "pnpm --filter=!@pathfinder/app build && pnpm --filter @pathfinder/app dev",
+    "dev:ac": "pnpm --filter=!@pathfinder/app build && pnpm --filter @pathfinder/app dev:ac",
     "build": " pnpm --filter=!@pathfinder/app build && pnpm --filter!=@pathfinder/data-services -r build",
     "export": "pnpm --filter @pathfinder/app export",
     "start": "pnpm --filter @pathfinder/app start",
