chore: Unified registration and path specification

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "pathfinder",
-  "version": "0.0.0",
+  "name": "AFFiNE",
+  "version": "0.3.0",
   "private": true,
   "author": "toeverything",
   "license": "MPL-2.0",
   "scripts": {
-    "dev": "pnpm --filter=!@pathfinder/app build && pnpm --filter @pathfinder/app dev",
-    "dev:ac": "pnpm --filter=!@pathfinder/app build && pnpm --filter @pathfinder/app dev:ac",
-    "build": " pnpm --filter=!@pathfinder/app build && pnpm --filter!=@pathfinder/data-services -r build",
-    "export": "pnpm --filter @pathfinder/app export",
-    "start": "pnpm --filter @pathfinder/app start",
-    "lint": "pnpm --filter @pathfinder/app lint",
+    "dev": "pnpm --filter=!@affine/app build && pnpm --filter @affine/app dev",
+    "dev:ac": "pnpm --filter=!@affine/app build && pnpm --filter @affine/app dev:ac",
+    "build": " pnpm --filter=!@affine/app build && pnpm --filter!=@affine/data-services -r build",
+    "export": "pnpm --filter @affine/app export",
+    "start": "pnpm --filter @affine/app start",
+    "lint": "pnpm --filter @affine/app lint",
     "test": "playwright test",
     "test:e2e": "playwright test",
     "test:e2e:codegen": "npx playwright codegen http://localhost:8080",
