--- a/packages/data-services/package.json
+++ b/packages/data-services/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pathfinder/data-services",
+  "name": "@affine/data-services",
   "version": "1.0.0",
   "description": "",
   "type": "module",
