--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pathfinder/app",
+  "name": "@affine/app",
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev -p 8080",
@@ -23,8 +23,8 @@
     "@mui/base": "^5.0.0-alpha.87",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.8.6",
-    "@pathfinder/data-services": "workspace:@pathfinder/data-services@*",
-    "@toeverything/pathfinder-logger": "workspace:@pathfinder/logger@*",
+    "@affine/data-services": "workspace:@affine/data-services@*",
+    "@toeverything/pathfinder-logger": "workspace:@affine/logger@*",
     "cmdk": "^0.1.20",
     "css-spring": "^4.1.0",
     "dayjs": "^1.11.7",
