--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,8 +23,8 @@
     "@mui/base": "^5.0.0-alpha.87",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.8.6",
-    "@affine/data-services": "workspace:@affine/data-services@*",
-    "@toeverything/pathfinder-logger": "workspace:@affine/logger@*",
+    "@affine/data-services": "workspace:*",
+    "@toeverything/pathfinder-logger": "workspace:*",
     "cmdk": "^0.1.20",
     "css-spring": "^4.1.0",
     "dayjs": "^1.11.7",
