feat: add printer and next.js logger style

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@affine/data-services": "workspace:@affine/data-services@*",
     "@blocksuite/blocks": "0.3.0-20221225075400-9710eea",
     "@blocksuite/editor": "0.3.0-20221225075400-9710eea",
     "@blocksuite/icons": "^2.0.2",
@@ -23,7 +24,6 @@
     "@mui/base": "^5.0.0-alpha.87",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.8.6",
-    "@affine/data-services": "workspace:@affine/data-services@*",
     "@toeverything/pathfinder-logger": "workspace:@affine/logger@*",
     "cmdk": "^0.1.20",
     "css-spring": "^4.1.0",
@@ -44,6 +44,7 @@
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "chalk-next": "^6.1.5",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
