fix: change changeset config

--- a/.github/workflows/temp_test.yml
+++ b/.github/workflows/temp_test.yml
@@ -77,8 +77,13 @@ jobs:
       - name: Create changelog
         id: changesets
         uses: changesets/action@v1
+        with:
+          publish: changeset release
+          createGithubReleases: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
   lint:
     name: Lint and E2E Test
     runs-on: ubuntu-latest
