feat: add design contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -131,10 +131,10 @@
       ]
     },
     {
-      "login": "fanjing22",
-      "name": "fanjing22",
-      "avatar_url": "https://avatars.githubusercontent.com/u/109729699?v=4",
-      "profile": "https://github.com/fanjing22",
+      "login": "VelikaHF",
+      "name": "Velika",
+      "avatar_url": "https://avatars.githubusercontent.com/u/121547898?v=4",
+      "profile": "https://github.com/VelikaHF",
       "contributions": [
         "design"
       ]
@@ -144,6 +144,15 @@
       "name": "Svaney",
       "avatar_url": "https://avatars.githubusercontent.com/u/110808979?v=4",
       "profile": "https://github.com/Svaney-ssman",
+      "contributions": [
+        "design"
+      ]
+    },
+    {
+      "login": "fanjing22",
+      "name": "fanjing22",
+      "avatar_url": "https://avatars.githubusercontent.com/u/109729699?v=4",
+      "profile": "https://github.com/fanjing22",
       "contributions": [
         "design"
       ]
