fix: change changeset config

--- a/.github/workflows/temp_test.yml
+++ b/.github/workflows/temp_test.yml
@@ -20,6 +20,8 @@ jobs:
     if: github.ref != 'refs/heads/master'
     runs-on: self-hosted
     environment: development
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v2
       - uses: pnpm/action-setup@v2
