--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.3",
     "lint-staged": "^13.1.0",
-    "husky": "^8.0.2"
+    "husky": "^8.0.2",
+    "@changesets/cli": "^2.26.0"
   },
   "eslintConfig": {
     "root": true,
