--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@affine/data-services": "workspace:@affine/data-services@*",
+    "@affine/data-services": "workspace:*",
     "@blocksuite/blocks": "0.3.0-20221225075400-9710eea",
     "@blocksuite/editor": "0.3.0-20221225075400-9710eea",
     "@blocksuite/icons": "^2.0.2",
