chore: Temporary shutdown of E2E testing for pathfinder1.1

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,7 +71,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           path: ./packages/app/.next
-
+  # Temporary shutdown of E2E testing
   # lint:
   #   name: Lint and E2E Test
   #   runs-on: ubuntu-latest
