--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -44,6 +44,7 @@
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@types/wicg-file-system-access": "^2020.9.5",
     "chalk-next": "^6.1.5",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
