--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@affine/data-services": "workspace:*",
-    "@blocksuite/blocks": "0.3.0-alpha.19",
-    "@blocksuite/editor": "0.3.0-alpha.19",
+    "@blocksuite/blocks": "0.3.0-20221230041649-6b8fcf7",
+    "@blocksuite/editor": "0.3.0-20221230041649-6b8fcf7",
     "@blocksuite/icons": "^2.0.2",
-    "@blocksuite/store": "0.3.0-alpha.19",
+    "@blocksuite/store": "0.3.0-20221230041649-6b8fcf7",
     "@emotion/css": "^11.10.0",
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
