fix: update based on PR comments

--- a/apps/ligo-virgo/src/assets/manifest.json
+++ b/apps/ligo-virgo/src/assets/manifest.json
@@ -3,7 +3,12 @@
     "icons": [
         {
             "sizes": "192x192",
-            "src": "logo.png",
+            "src": "logo-192.png",
+            "type": "image/png"
+        },
+        {
+            "sizes": "512x512",
+            "src": "logo-512.png",
             "type": "image/png"
         }
     ],
