[misc] Remove the const server port in package.json

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -2,7 +2,7 @@
   "name": "@affine/app",
   "version": "0.3.1",
   "scripts": {
-    "dev": "next dev -p 8080",
+    "dev": "next dev",
     "build": "next build",
     "export": "next export",
     "start": "next start",
