chore: add delete modules in npm script

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:unit": "playwright test --config=playwright.config.unit.ts",
     "postinstall": "husky install",
     "notify": "node --experimental-modules scripts/notify.mjs",
-    "update:blocksuite": "pnpm i --filter @affine/app --filter @affine/datacenter @blocksuite/blocks@nightly @blocksuite/store@nightly && pnpm i --filter @affine/app @blocksuite/editor@nightly"
+    "update:blocksuite": "pnpm i --filter @affine/app --filter @affine/datacenter @blocksuite/blocks@nightly @blocksuite/store@nightly && pnpm i --filter @affine/app @blocksuite/editor@nightly",
+    "delete:node_modules": "find . -name \"node_modules\" -exec rm -rf '{}' +"
   },
   "lint-staged": {
     "*": "prettier --write --ignore-unknown",
